--- a/app/src/main/res/layout/fragment_drive.xml
+++ b/app/src/main/res/layout/fragment_drive.xml
@@ -5,9 +5,17 @@
     android:layout_height="match_parent"
     tools:context=".ui.Drive.DriveFragment">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/driveRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Welcome" />
+        android:layout_height="match_parent" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/addDriveButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:layout_gravity="bottom|left"
+        android:src="@drawable/baseline_add_24" />
 
 </FrameLayout>
