--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -34,6 +34,10 @@
             android:id="@+id/nav_aboutus"
             android:icon="@drawable/baseline_info_24"
             android:title="@string/menu_aboutus" />
+        <item
+            android:id="@+id/nav_drive"
+            android:icon="@drawable/baseline_image_24"
+            android:title="@string/menu_drive" />
 
 
     </group>
