--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -53,6 +53,11 @@
             android:id="@+id/action_nav_task_to_nav_home"
             app:destination="@id/nav_home" />
     </fragment>
+    <fragment
+        android:id="@+id/nav_drive"
+        android:name="com.example.studihelp.ui.Drive.DriveFragment"
+        android:label="@string/menu_drive"
+        tools:layout="@layout/fragment_drive" />
 
 
 </navigation>
