--- a/app/src/main/res/layout/fragment_timetable2.xml
+++ b/app/src/main/res/layout/fragment_timetable2.xml
@@ -16,7 +16,7 @@
         android:id="@+id/btnAddTimetable"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="left"
+        android:layout_gravity="bottom|left"
         android:layout_margin="16dp"
         android:foregroundGravity="bottom"
         android:src="@drawable/baseline_add_24"
