--- a/app/src/main/res/layout/dialog_add_healty.xml
+++ b/app/src/main/res/layout/dialog_add_healty.xml
@@ -20,20 +20,20 @@
         android:hint="Enter duration"
         android:inputType="text"/>
 
-    <EditText
-        android:id="@+id/healthDateEditText"
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/healthDateButton"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Select Date"
         android:layout_below="@id/healthDurationEditText"
-        android:layout_marginTop="8dp"
-        android:hint="Enter date"
-        android:inputType="text"/>
+        android:layout_marginTop="8dp"/>
+
 
     <EditText
         android:id="@+id/healthNotesEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/healthDateEditText"
+        android:layout_below="@id/healthDateButton"
         android:layout_marginTop="8dp"
         android:hint="Enter notes"
         android:inputType="text"/>
