--- a/app/src/main/res/layout/fragment_expenses.xml
+++ b/app/src/main/res/layout/fragment_expenses.xml
@@ -6,35 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".ui.expenses.ExpensesFragment">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
-
-
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tabLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="?attr/colorPrimary" />
-
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/viewPager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/expensesRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="530dp"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        android:background="@drawable/text_borderhome"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/addExpenseButton" />
 
-
-
-
+    <TextView
+        android:id="@+id/totalExpensesTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:text="Total: 0.0"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/text_borderhome"
+        android:layout_centerHorizontal="true"
+        android:padding="16dp" />
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addExpenseButton"
         android:layout_width="wrap_content"
