--- a/app/src/main/res/layout/fragment_timetable2.xml
+++ b/app/src/main/res/layout/fragment_timetable2.xml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/text_borderhome"
     tools:context=".ui.Timetable.TimetableFragment">
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewtimetable"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="8dp" />
+        android:layout_width="383dp"
+        android:layout_height="636dp"
+        android:layout_margin="16dp"
+        android:clipToPadding="false"
+        android:background="@drawable/text_borderhome"
+        android:scrollbars="vertical" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btnAddTimetable"
