--- a/app/src/main/res/layout/item_drive.xml
+++ b/app/src/main/res/layout/item_drive.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:background="@drawable/text_borderhome"
     android:padding="16dp">
 
     <TextView
@@ -11,6 +12,7 @@
         android:layout_height="wrap_content"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:background="@drawable/text_borderhome"
         android:layout_marginBottom="8dp"/>
 
     <ImageView
@@ -18,6 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:scaleType="centerCrop"
+
         android:layout_marginBottom="16dp"/>
 
 </LinearLayout>
