--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -3,6 +3,7 @@
     android:layout_width="100dp"
     android:layout_height="100dp"
     android:orientation="vertical"
+    android:background="@drawable/text_borderhome"
     android:padding="8dp">
 
     <TextView
