--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -2,6 +2,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:background="@drawable/text_borderhome"
+    android:textColor="@color/white"
     android:padding="16dp">
 
     <TextView
@@ -10,6 +12,7 @@
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:textSize="18sp"
+
         android:text="Title" />
 
     <TextView
