--- a/app/src/main/res/layout/item_timetable_data.xml
+++ b/app/src/main/res/layout/item_timetable_data.xml
@@ -4,27 +4,26 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="@drawable/text_borderhome"
-    android:padding="16dp">
+    android:padding="8dp">
 
     <TextView
         android:id="@+id/nameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:textStyle="bold"/>
+        android:text="Name"
+        android:textSize="16sp" />
 
     <TextView
-        android:id="@+id/roleTextView"
+        android:id="@+id/roomTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:layout_marginTop="8dp"/>
+        android:text="Room"
+        android:textSize="14sp" />
 
     <TextView
-        android:id="@+id/descriptionTextView"
+        android:id="@+id/timeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:layout_marginTop="8dp"/>
-
+        android:text="Time"
+        android:textSize="14sp" />
 </LinearLayout>
