--- a/app/src/main/res/layout/item_timetable_header.xml
+++ b/app/src/main/res/layout/item_timetable_header.xml
@@ -2,21 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
     android:background="@drawable/text_borderhome"
-    android:padding="16dp">
+    android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/expensesNameTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Expense Name" />
-
-    <TextView
-        android:id="@+id/expensesAmountTextView"
+        android:id="@+id/headerTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0.0" />
+        android:text="Header"
+        android:textSize="16sp"
 
+        android:padding="8dp" />
 </LinearLayout>
