--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,10 +7,12 @@
         <item
             android:id="@+id/nav_home"
             android:icon="@drawable/baseline_home_24"
+            android:background="@drawable/text_borderhome"
             android:title="@string/menu_home" />
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/baseline_monitor_heart_24"
+            android:background="@drawable/text_borderhome"
             android:title="@string/menu_gallery" />
         <item
             android:id="@+id/nav_slideshow"
@@ -31,13 +33,15 @@
             android:title="@string/menu_task" />
 
         <item
-            android:id="@+id/nav_aboutus"
-            android:icon="@drawable/baseline_info_24"
-            android:title="@string/menu_aboutus" />
-        <item
             android:id="@+id/nav_drive"
             android:icon="@drawable/baseline_image_24"
             android:title="@string/menu_drive" />
+
+        <item
+            android:id="@+id/nav_aboutus"
+            android:icon="@drawable/baseline_info_24"
+            android:title="@string/menu_aboutus" />
+
 
 
     </group>
