--- a/app/src/main/res/layout/dialog_edit_task.xml
+++ b/app/src/main/res/layout/dialog_edit_task.xml
@@ -31,6 +31,8 @@
     <Button
         android:id="@+id/btnSelectEditDate"
         android:layout_width="wrap_content"
+        style="@style/DarkModeButtonStyle"
+        android:background="@drawable/button_background"
         android:layout_height="wrap_content"
         android:text="Select Date" />
 
@@ -46,6 +48,8 @@
         android:id="@+id/btnSelectEditTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/DarkModeButtonStyle"
+        android:background="@drawable/button_background"
         android:text="Select Time" />
 
 </LinearLayout>
