--- a/app/src/main/res/layout/dialog_add_drive.xml
+++ b/app/src/main/res/layout/dialog_add_drive.xml
@@ -21,6 +21,8 @@
 
     <Button
         android:id="@+id/btnSelectImage"
+        style="@style/DarkModeButtonStyle"
+        android:background="@drawable/button_background"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Select Image" />
