--- a/app/src/main/res/layout/dialog_add_healty.xml
+++ b/app/src/main/res/layout/dialog_add_healty.xml
@@ -3,19 +3,20 @@
     android:layout_height="wrap_content"
     android:padding="16dp">
 
-    <EditText
-        android:id="@+id/healthTypeEditText"
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/healthTypeButton"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:hint="Enter type of health entry"
-        android:inputType="text"/>
+        android:text="Select type"
+        style="@style/DarkModeButtonStyle"
+        android:background="@drawable/button_background"
+        android:onClick="showTypeSelectionDialog" />
 
     <EditText
         android:id="@+id/healthDurationEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/healthTypeEditText"
+        android:layout_below="@id/healthTypeButton"
         android:layout_marginTop="8dp"
         android:hint="Enter duration"
         android:inputType="text"/>
@@ -25,6 +26,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Select Date"
+        style="@style/DarkModeButtonStyle"
+        android:background="@drawable/button_background"
         android:layout_below="@id/healthDurationEditText"
         android:layout_marginTop="8dp"/>
 
