--- a/app/src/main/res/layout/dialog_edit_drive.xml
+++ b/app/src/main/res/layout/dialog_edit_drive.xml
@@ -22,6 +22,8 @@
     <Button
         android:id="@+id/btnSelectImage"
         android:layout_width="match_parent"
+        style="@style/DarkModeButtonStyle"
+        android:background="@drawable/button_background"
         android:layout_height="wrap_content"
         android:text="Select Image" />
 </LinearLayout>
