--- a/app/src/main/res/layout/dialog_edit_timetable.xml
+++ b/app/src/main/res/layout/dialog_edit_timetable.xml
@@ -21,23 +21,31 @@
         android:id="@+id/startTimeButtonTimetableEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        style="@style/DarkModeButtonStyle"
+        android:background="@drawable/button_background"
         android:text="Select Start Time" />
 
     <Button
         android:id="@+id/endTimeButtonTimetableEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        style="@style/DarkModeButtonStyle"
+        android:background="@drawable/button_background"
         android:text="Select End Time" />
 
     <Button
         android:id="@+id/dayOfWeekButtonEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        style="@style/DarkModeButtonStyle"
+        android:background="@drawable/button_background"
         android:text="Select Day of Week" />
 
     <Button
         android:id="@+id/colorButtonEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        style="@style/DarkModeButtonStyle"
+        android:background="@drawable/button_background"
         android:text="Select Color" />
 </LinearLayout>
