--- a/app/src/main/res/layout/fragment_expenses.xml
+++ b/app/src/main/res/layout/fragment_expenses.xml
@@ -30,6 +30,7 @@
         android:layout_margin="16dp"
         android:layout_gravity="bottom|left"
         android:src="@drawable/baseline_add_24"
+        style="@style/DarkModeButtonStyle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
