--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -6,6 +6,13 @@
         <item name="colorPrimary">@color/black</item>
         <item name="android:textColor">@color/white</item>
 
+
+
+
+    </style>
+    <style name="DarkModeButtonStyle" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/text_borderhome</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
 
