--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -32,7 +31,7 @@
                 android:textSize="36sp"
                 android:textAlignment="center"
                 android:textStyle="bold"
-                android:textColor="@color/black"/>
+                android:textColor="@color/black" />
 
             <EditText
                 android:layout_width="match_parent"
@@ -43,8 +42,7 @@
                 android:padding="8dp"
                 android:hint="Name"
                 android:drawableLeft="@drawable/baseline_account_circle_24"
-                android:drawablePadding="8dp"
-                />
+                android:drawablePadding="8dp" />
 
             <EditText
                 android:layout_width="match_parent"
@@ -55,8 +53,7 @@
                 android:padding="8dp"
                 android:hint="Email"
                 android:drawableLeft="@drawable/baseline_email_24"
-                android:drawablePadding="8dp"
-              />
+                android:drawablePadding="8dp" />
 
             <EditText
                 android:layout_width="match_parent"
@@ -67,8 +64,7 @@
                 android:padding="8dp"
                 android:hint="Username"
                 android:drawableLeft="@drawable/baseline_accessibility_24z"
-                android:drawablePadding="8dp"
-     />
+                android:drawablePadding="8dp" />
 
             <EditText
                 android:layout_width="match_parent"
@@ -81,7 +77,7 @@
                 android:inputType="textPassword"
                 android:drawableLeft="@drawable/baseline_lock_24"
                 android:drawablePadding="8dp"
-                android:textColor="@color/black"/>
+                android:textColor="@color/black" />
 
             <Button
                 android:layout_width="match_parent"
@@ -92,7 +88,7 @@
                 style="@style/DarkModeButtonStyle"
                 android:background="@drawable/button_background"
                 android:layout_marginTop="30dp"
-                app:cornerRadius = "20dp"/>
+                app:cornerRadius="20dp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -102,8 +98,7 @@
                 android:layout_gravity="center"
                 android:padding="8dp"
                 android:layout_marginTop="10dp"
-                android:textSize="18sp"
-             />
+                android:textSize="18sp" />
 
         </LinearLayout>
 
