--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Base.Theme.StudiHelp" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
@@ -7,9 +7,8 @@
         <item name="android:textColor">@color/white</item>
 
 
-
-
     </style>
+
     <style name="DarkModeButtonStyle" parent="Widget.AppCompat.Button">
         <item name="android:background">@drawable/text_borderhome</item>
         <item name="android:textColor">@color/white</item>
